5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4014/executions/1635_2445.log
== TEST (2019-04-12 14:34:05) 
-- CODE:
x=input("c ou f:")
y=float(input("valoor da temperatura:"))
C=(5*(y-32)/9
F=(9*y/5)+32
if(x=="c"):
	print(round(F,2))
else
	print(round(C,2))
-- ERROR:
File "XXXX", line 4
    F=(9*y/5)+32
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:34:31) 
-- CODE:
x=input("c ou f:")
y=float(input("valoor da temperatura:"))
C=(5*(y-32)/9
F=((9*y)/5)+32)
if(x=="c"):
	print(round(F,2))
else
	print(round(C,2))
-- ERROR:
File "XXXX", line 4
    F=((9*y)/5)+32)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:34:44) 
-- CODE:
x=input("c ou f:")
y=float(input("valoor da temperatura:"))
C=(5*(y-32)/9
F=((9*y)/5)+32)
if(x=="c"):
	print(round(F,2))
else
	print(round(C,2))
-- EXECUTION TIME:
0.210706
-- ERROR:
  File "/home/codebench/codes/1635/2445/main.py", line 4
    F=((9*y)/5)+32)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:34:47) 
-- CODE:
x=input("c ou f:")
y=float(input("valoor da temperatura:"))
C=(5*(y-32)/9
F=((9*y)/5)+32)
if(x=="c"):
	print(round(F,2))
else
	print(round(C,2))
-- ERROR:
File "XXXX", line 4
    F=((9*y)/5)+32)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:35:23) 
-- CODE:
x=input("c ou f:")
v=float(input("valoor da temperatura:"))
C=(5*(v-32)/9
F=((9*v/5)+32)
if(x=="c"):
	print(round(F,2))
else
	print(round(C,2))
-- EXECUTION TIME:
0.183952
-- ERROR:
  File "/home/codebench/codes/1635/2445/main.py", line 4
    F=((9*v/5)+32)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:35:24) 
-- CODE:
x=input("c ou f:")
v=float(input("valoor da temperatura:"))
C=(5*(v-32)/9
F=((9*v/5)+32)
if(x=="c"):
	print(round(F,2))
else
	print(round(C,2))
-- ERROR:
File "XXXX", line 4
    F=((9*v/5)+32)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:36:07) 
-- CODE:
x=input("c ou f:")
v=float(input("valor da temperatura:"))
C=(5*(v-32)/9
F=((9*v/5)+32)
if(x=="c"):
	print(round(F,2))
else
	print(round(C,2))
-- EXECUTION TIME:
0.186888
-- ERROR:
  File "/home/codebench/codes/1635/2445/main.py", line 4
    F=((9*v/5)+32)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:36:24) 
-- CODE:
x=input("C ou F:")
v=float(input("valor da temperatura:"))
C=(5*(v-32)/9
F=((9*v/5)+32)
if(x=="C"):
	print(round(F,2))
else
	print(round(C,2))
-- ERROR:
File "XXXX", line 4
    F=((9*v/5)+32)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:36:34) 
-- CODE:
x=input("C ou F:")
v=float(input("valor da temperatura:"))
C=(5*(v-32)/9
F=(9*v/5+32)
if(x=="C"):
	print(round(F,2))
else
	print(round(C,2))
-- ERROR:
File "XXXX", line 4
    F=(9*v/5+32)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:36:40) 
-- CODE:
x=input("C ou F:")
v=float(input("valor da temperatura:"))
C=(5*(v-32)/9
F=9*v/5+32
if(x=="C"):
	print(round(F,2))
else
	print(round(C,2))
-- ERROR:
File "XXXX", line 4
    F=9*v/5+32
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:48:20) 
-- CODE:
x=input("C ou F:")
v=float(input("valor da temperatura:"))
C=(5*(v-32)/9
F=9*v/5+32
if(x=="C"):
	print(round(F,2))
else
	print(round(C,2))
-- ERROR:
File "XXXX", line 4
    F=9*v/5+32
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:07:39) 
-- CODE:
x=input("C ou F:")
v=float(input("valor da temperatura:"))
C=(5*(v-32)/9
F=(9*v/5)+32)
if(x=="C"):
	print(round(F,2))
else
	print(round(C,2))
-- ERROR:
File "XXXX", line 4
    F=(9*v/5)+32)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:07:51) 
-- CODE:
x=input("C ou F:")
v=float(input("valor da temperatura:"))
C=(5*(v-32)/9
F=(9*v/5)+32
if(x=="C"):
	print(round(F,2))
else
	print(round(C,2))
-- ERROR:
File "XXXX", line 4
    F=(9*v/5)+32
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 12:23:44) 
-- CODE:
opcao=input("em C/F")
if(opcao=="C"):
	c=float(input("quantos graus?"))
	f=(9*c/5)+32
	print(round(f, 2))
else:
	f=float(input("quantos graus"))
	c=(5/9)*(f-32)
	print(round(c, 2))
-- EXECUTION TIME:
0.12693
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
